--- a/css.css
+++ b/css.css
@@ -27,6 +27,10 @@ header {
     padding: 20px;
 }
 
+#empresas-internacionales {
+    display: none;
+}
+
 #emprendedores-list {
     list-style: none;
     counter-reset: emprendedores-counter;
