--- a/css.css
+++ b/css.css
@@ -12,7 +12,7 @@ header {
 
 .tab-button {
     background-color: #555;
-    color: #fff;
+    color: #ffffff96;
     border: none;
     padding: 10px 20px;
     margin: 0 5px;
